--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,15 @@
             <artifactId>akka-http-jackson_2.11</artifactId>
             <version>10.0.11</version>
         </dependency>
+        <dependency>
+            <groupId>io.undertow</groupId>
+            <artifactId>undertow-core</artifactId>
+            <version>1.4.21.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.zeromq</groupId>
+            <artifactId>jeromq</artifactId>
+            <version>0.4.3</version>
+        </dependency>
     </dependencies>
 </project>
